// Especifica la versión de la sintaxis de Protocol Buffers.
syntax = "proto3";

// Define el paquete de Go que se generará. Evita colisiones de nombres.
option go_package = "/proto";

service Ofertas {
  rpc Ofertas (OfertasRequest) returns (OfertasResponse);
}

service DynamoDB {
  rpc GuardarOfertas (OfertasRequest) returns (OfertasResponse);
  rpc EnviarOfertas (OfertasRequest) returns (OfertasResponse);
}

message OfertasRequest {
  string producto_id = 1;
  string tienda = 2;
  string categoria = 3;
  string producto = 4;
  int32 precio_descuento = 5;
  int32 stock = 6;
  string fecha = 7;
  string cliente_id = 8;
}

message OfertasResponse {
  string broker_message = 1;
}  